.provarCaches/00D6C0000000xA6UAI/objects/Broadcast_Message__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Clickable_Link__c</fullName>
        <label>Clickable Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Message__c</fullName>
        <label>Message</label>
        <length>650</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Sequence__c</fullName>
        <label>Sequence</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>PHSS Broadcast Message</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Active__c</columns>
        <columns>NAME</columns>
        <columns>Message__c</columns>
        <columns>Sequence__c</columns>
        <columns>Clickable_Link__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Broadcast Message Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PHSS Broadcast Messages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>